packages/core/src/components/bce-input/bce-input.scss
@import '../../../scss/input-creator.scss';

:host {
  @include bce-color-default(primary);
  position: relative;
  display: flex;
  margin: 20px 0;
  height: 48px;

  input::-ms-clear,
  input::-ms-reveal {
    display: none;
  }

  input,
  textarea {
    flex: 1 0 100%;
    width: 100%;
    height: inherit;
    padding: 14px 12px;
    font-size: 0.9em;
    font-family: inherit;
    background-color: bce-color(surface);
    color: bce-color-on(surface);
    border: 1px solid bce-color-on(surface, 4);
    border-radius: 4px;
    box-sizing: border-box;
    outline: none;
    transition: border-color 0.3s ease-in-out;
    -webkit-appearance: none;
    cursor: inherit;

    &[type='color'] {
      padding: 10px;
    }

    &::-webkit-color-swatch-wrapper {
      padding: 0;
    }

    &::-webkit-color-swatch {
      border: none;
      border-radius: 2px;
    }
  }

  textarea {
    resize: none;
    overflow-y: hidden;
    padding: 10px 12px;
  }

  .action {
    position: absolute;
    display: flex;
    align-items: center;
    right: 1px;
    height: 100%;

    &[data-hidden] {
      display: none;
    }
  }
}

:host([type='textarea']) {
  .action {
    align-items: flex-start;
  }
}

:host([disabled]) {
  input,
  textarea {
    background-color: bce-color-on(surface, 4);
    color: bce-color-on(surface, 3);
    border-color: bce-color-on(surface, 4);
  }
}

:host([focus]) {
  input,
  textarea {
    border-color: bce-color();
  }
}

:host([error]) {
  bce-label {
    color: bce-color(error);
  }

  input,
  textarea {
    border-color: bce-color(error);
  }
}

:host([label]) {
  bce-label {
    position: absolute;
    margin: 15px 12px;
    font-size: 0.9em;
    transition: all 0.15s cubic-bezier(0.4, 0, 0.2, 1);

    &[data-hover] {
      margin: 7px 12px;
      font-size: 0.8em;
    }
  }

  input,
  textarea {
    padding: 22px 12px 4px;

    &[type='color'] {
      padding: 24px 10px 8px;
    }
  }
}

@include media-medium {
  :host(:not([compact])) {
    height: 40px;

    input {
      padding: 12px;

      &[type='color'] {
        padding: 10px;
      }
    }

    textarea {
      padding: 10px 12px;
    }

    bce-button {
      right: 0px;
    }
  }

  :host(:not([compact])[label]) {
    bce-label {
      flex: 0 0 25%;
      position: initial;
      margin: 0;
      font-size: initial;
      line-height: 40px;

      &[data-hover] {
        margin: 0;
        font-size: initial;
      }
    }

    input,
    textarea {
      flex: 1 0 75%;
    }

    input {
      padding: 14px 12px;

      &[type='color'] {
        padding: 10px;
      }
    }

    textarea {
      padding: 10px 12px;
    }
  }
}

